--- a/about-us.html
+++ b/about-us.html
@@ -53,7 +53,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
@@ -63,7 +63,7 @@
                                 <a class="nav-link" href="contact.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about-us.html">Nosotros</a>
+                                <a class="nav-link active" href="about-us.html">Nosotros</a>
                             </li> 
                             <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQ</a>
