--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <header id="top" class="top_navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%"
-                            alt="" /></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%" alt=""/></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
@@ -63,6 +62,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQ</a>
                             </li>
+                        </ul>
+                        <ul class="navbar-nav">
+                            <form action="buscar.php" class="Navbar">
+                                <input type="text" placeholder="Buscar" name="buscar" class="nav-link">
+                            </form>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="login.html">Iniciar
