--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                                 <a class="nav-link dropdown" href="#" id="navbardrop"
                                     data-toggle="dropdown">Categorias</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="treatments.html">Productos</a>
-                                    <a class="dropdown-item" href="#">Link 2</a>
+                                    <a class="dropdown-item" href="treatments.html">Productos 1</a>
+                                    <a class="dropdown-item" href="#">Productos 2</a>
                                     <a class="dropdown-item" href="#">Link 3</a>
                                 </div>
                             </li>
