--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +45,8 @@
         <header id="top" class="top_navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%" alt=""/></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%"
+                            alt="" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
@@ -64,10 +66,10 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="about-us.html">Nosotros</a>
-                            </li> 
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQ</a>
-                            </li>                       
+                            </li>
                         </ul>
                         <ul class="navbar-nav">
                             <form action="buscar.php" class="Navbar">
@@ -75,7 +77,8 @@
                             </form>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="login.html">Iniciar Sesion</a>
+                            <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="login.html">Iniciar
+                                    Sesion</a>
                             </li>
                         </ul>
                     </div>
@@ -89,12 +92,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="about-banner-title">
-                            <h2>About Us</h2>
+                            <h2>¿Quiénes Somos?</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item active"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">About Us</li>
+                                    <li class="breadcrumb-item active"><a href="index.html">Inicio</a></li>
+                                    <li class="breadcrumb-item" aria-current="page">Nosotros</li>
                                 </ol>
                             </nav>
                         </div>
@@ -110,10 +113,17 @@
                     <div class="col-md-7 col-lg-8 col-xl-8">
                         <div class="about-pharmacy-conten">
                             <h2>About Planex Pharmacy</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh
-                                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
-                            <p>Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a
-                                augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultricies risus vel sapien facilisis facilisis. Sed velit nulla, vestibulum
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Proin gravida
+                                nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi
+                                elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh
+                                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
+                                tincidunt auctor a ornare odio.</p>
+                            <p>Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad
+                                litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
+                                ac urna eu felis dapibus condimentum sit amet a
+                                augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultricies risus vel
+                                sapien facilisis facilisis. Sed velit nulla, vestibulum
                                 ut ligula sed, efficitur interdum ipsum. Praesent eget sem nisl.</p>
                         </div>
 
@@ -156,9 +166,12 @@
                                 <p>Donec in neque nisi. Cras at ultricies nulla. Mauris consequat nulla vitae</p>
                                 <div class="follow-icon">
                                     <ul>
-                                        <li><a class="facebook" href="javascript:;"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a class="twitter" href="javascript:;"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a class="linkedin" href="javascript:;"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a class="facebook" href="javascript:;"><i class="fa fa-facebook"></i></a>
+                                        </li>
+                                        <li><a class="twitter" href="javascript:;"><i class="fa fa-twitter"></i></a>
+                                        </li>
+                                        <li><a class="linkedin" href="javascript:;"><i class="fa fa-linkedin"></i></a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -172,9 +185,12 @@
                                 <p>Donec in neque nisi. Cras at ultricies nulla. Mauris consequat nulla vitae</p>
                                 <div class="follow-icon">
                                     <ul>
-                                        <li><a class="facebook" href="javascript:;"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a class="twitter" href="javascript:;"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a class="linkedin" href="javascript:;"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a class="facebook" href="javascript:;"><i class="fa fa-facebook"></i></a>
+                                        </li>
+                                        <li><a class="twitter" href="javascript:;"><i class="fa fa-twitter"></i></a>
+                                        </li>
+                                        <li><a class="linkedin" href="javascript:;"><i class="fa fa-linkedin"></i></a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -188,9 +204,12 @@
                                 <p>Donec in neque nisi. Cras at ultricies nulla. Mauris consequat nulla vitae</p>
                                 <div class="follow-icon">
                                     <ul>
-                                        <li><a class="facebook" href="javascript:;"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a class="twitter" href="javascript:;"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a class="linkedin" href="javascript:;"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a class="facebook" href="javascript:;"><i class="fa fa-facebook"></i></a>
+                                        </li>
+                                        <li><a class="twitter" href="javascript:;"><i class="fa fa-twitter"></i></a>
+                                        </li>
+                                        <li><a class="linkedin" href="javascript:;"><i class="fa fa-linkedin"></i></a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -233,20 +252,24 @@
                                 <div class="align-items-center">
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img src="images/user-icon.png" alt="" /></div>
+                                            <div class="input-group-addon"><img src="images/user-icon.png" alt="" />
+                                            </div>
                                             <input type="text" class="form-control" id="name" placeholder="Name">
                                         </div>
                                     </div>
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img src="images/email-icon.png" alt="" /></div>
+                                            <div class="input-group-addon"><img src="images/email-icon.png" alt="" />
+                                            </div>
                                             <input type="text" class="form-control" id="email" placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img class="message-img" src="images/message-icon.png" alt="" /></div>
-                                            <textarea class="form-control" id="message" placeholder="Message"></textarea>
+                                            <div class="input-group-addon"><img class="message-img"
+                                                    src="images/message-icon.png" alt="" /></div>
+                                            <textarea class="form-control" id="message"
+                                                placeholder="Message"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-form-box">
@@ -328,7 +351,7 @@
 
     <!-- jquery latest version -->
     <script src="js/jquery.min.js"></script>
-    
+
     <!-- popper.min js -->
     <script src="js/popper.min.js"></script>
 
@@ -345,4 +368,5 @@
     <script src="js/custom.js"></script>
 
 </body>
+
 </html>
