--- a/reviews.html
+++ b/reviews.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +38,8 @@
         <header id="top" class="top_navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%" alt=""/></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%"
+                            alt="" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
@@ -57,10 +59,10 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html">Nosotros</a>
-                            </li> 
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQ</a>
-                            </li>                       
+                            </li>
                         </ul>
                         <ul class="navbar-nav">
                             <form action="buscar.php" class="Navbar">
@@ -68,7 +70,8 @@
                             </form>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="login.html">Iniciar Sesion</a>
+                            <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="login.html">Iniciar
+                                    Sesion</a>
                             </li>
                         </ul>
                     </div>
@@ -82,12 +85,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="about-banner-title">
-                            <h2>Reviews</h2>
+                            <h2>Reseñas</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item active"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">Reviews</li>
+                                    <li class="breadcrumb-item active"><a href="index.html">Inicio</a></li>
+                                    <li class="breadcrumb-item" aria-current="page">Reseñas</li>
                                 </ol>
                             </nav>
                         </div>
@@ -105,7 +108,9 @@
                             <div class="quote-img">
                                 <img src="images/quote-img.png" alt="" />
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in ultrices tortor, nec tempor velit. Morbi maximus sit amet arcu sed egestas. Donec nec turpis cursus, blandit mauris laoreet, pharetra felis. Maecenas eu nisl
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in ultrices tortor, nec
+                                tempor velit. Morbi maximus sit amet arcu sed egestas. Donec nec turpis cursus, blandit
+                                mauris laoreet, pharetra felis. Maecenas eu nisl
                                 sit amet libero fringilla dapibus elementum id eros.</p>
                         </div>
                         <div class="reviews">
@@ -118,7 +123,9 @@
                             <div class="quote-img">
                                 <img src="images/quote-img.png" alt="" />
                             </div>
-                            <p>Sed at aliquam lacus. Nullam at pretium nisi, et auctor mauris. Curabitur rhoncus magna a nisi tristique sagittis. Proin sed faucibus nunc, pharetra aliquam dolor. Nam pulvinar dolor quis arcu pellentesque, vel posuere velit
+                            <p>Sed at aliquam lacus. Nullam at pretium nisi, et auctor mauris. Curabitur rhoncus magna a
+                                nisi tristique sagittis. Proin sed faucibus nunc, pharetra aliquam dolor. Nam pulvinar
+                                dolor quis arcu pellentesque, vel posuere velit
                                 venenatis.</p>
                         </div>
                         <div class="reviews">
@@ -131,7 +138,9 @@
                             <div class="quote-img">
                                 <img src="images/quote-img.png" alt="" />
                             </div>
-                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In vitae erat bibendum, imperdiet metus et, dapibus enim. Mauris et orci sit amet lorem accumsan consequat. Sed imperdiet consectetur
+                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                himenaeos. In vitae erat bibendum, imperdiet metus et, dapibus enim. Mauris et orci sit
+                                amet lorem accumsan consequat. Sed imperdiet consectetur
                                 pretium.</p>
                         </div>
                         <div class="reviews">
@@ -144,7 +153,9 @@
                             <div class="quote-img">
                                 <img src="images/quote-img.png" alt="" />
                             </div>
-                            <p>Aenean in risus risus. Vivamus magna massa, ultrices pellentesque aliquam a, tempor vel quam. Maecenas ac vestibulum enim. Phasellus sit amet massa non sapien rutrum tincidunt eu a felis. Suspendisse non rhoncus sapien, volutpat
+                            <p>Aenean in risus risus. Vivamus magna massa, ultrices pellentesque aliquam a, tempor vel
+                                quam. Maecenas ac vestibulum enim. Phasellus sit amet massa non sapien rutrum tincidunt
+                                eu a felis. Suspendisse non rhoncus sapien, volutpat
                                 rhoncus neque.</p>
                         </div>
                         <div class="reviews">
@@ -157,7 +168,9 @@
                             <div class="quote-img">
                                 <img src="images/quote-img.png" alt="" />
                             </div>
-                            <p>Nullam scelerisque elit vitae ex suscipit, sed malesuada elit blandit. Sed id neque in lorem fermentum finibus. Curabitur mollis nulla quam. Nunc vestibulum nibh nec facilisis hendrerit. Donec consectetur, urna quis vestibulum
+                            <p>Nullam scelerisque elit vitae ex suscipit, sed malesuada elit blandit. Sed id neque in
+                                lorem fermentum finibus. Curabitur mollis nulla quam. Nunc vestibulum nibh nec facilisis
+                                hendrerit. Donec consectetur, urna quis vestibulum
                                 feugiat, enim quam condimentum eros tellus id ipsum.</p>
                         </div>
                         <div class="reviews">
@@ -170,7 +183,9 @@
                             <div class="quote-img">
                                 <img src="images/quote-img.png" alt="" />
                             </div>
-                            <p>Nullam ultricies, mi non venenatis volutpat, lacus augue porttitor justo, nec porttitor justo ipsum non diam. Nunc iaculis enim quis augue tempor ultrices. Proin sed auctor justo, ut ullamcorper sem. Suspendisse potenti. Vestibulum
+                            <p>Nullam ultricies, mi non venenatis volutpat, lacus augue porttitor justo, nec porttitor
+                                justo ipsum non diam. Nunc iaculis enim quis augue tempor ultrices. Proin sed auctor
+                                justo, ut ullamcorper sem. Suspendisse potenti. Vestibulum
                                 dictum blandit ipsum.</p>
                         </div>
                         <div class="reviews">
@@ -191,7 +206,8 @@
                         <div class="col-md-6">
                             <div class="add-review-box">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="Subject" aria-describedby="Subject" placeholder="Subject">
+                                    <input type="text" class="form-control" id="Subject" aria-describedby="Subject"
+                                        placeholder="Subject">
                                 </div>
                             </div>
                         </div>
@@ -200,17 +216,20 @@
                                 <div class="form-group">
                                     <input name="img[]" class="file" type="file">
                                     <div class="input-group col-xs-12">
-                                      <input class="form-control input-lg" placeholder="Upload here photo" type="text">
-                                      <span class="input-group-btn">
-                                      <button class="browse btn btn-default input-lg" type="button"><i class="glyphicon glyphicon-search"></i> Upload</button>
-                                      </span> </div>
-                                  </div>
+                                        <input class="form-control input-lg" placeholder="Upload here photo"
+                                            type="text">
+                                        <span class="input-group-btn">
+                                            <button class="browse btn btn-default input-lg" type="button"><i
+                                                    class="glyphicon glyphicon-search"></i> Upload</button>
+                                        </span> </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="add-review-box">
                                 <div class="form-group">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message"></textarea>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1"
+                                        placeholder="Message"></textarea>
                                 </div>
                                 <a class=" btn btn-primary" href="javascript:;">Add Review</a>
                             </div>
@@ -253,20 +272,24 @@
                                 <div class="align-items-center">
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img src="images/user-icon.png" alt="" /></div>
+                                            <div class="input-group-addon"><img src="images/user-icon.png" alt="" />
+                                            </div>
                                             <input type="text" class="form-control" id="name" placeholder="Name">
                                         </div>
                                     </div>
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img src="images/email-icon.png" alt="" /></div>
+                                            <div class="input-group-addon"><img src="images/email-icon.png" alt="" />
+                                            </div>
                                             <input type="text" class="form-control" id="email" placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img class="message-img" src="images/message-icon.png" alt="" /></div>
-                                            <textarea class="form-control" id="message" placeholder="Message"></textarea>
+                                            <div class="input-group-addon"><img class="message-img"
+                                                    src="images/message-icon.png" alt="" /></div>
+                                            <textarea class="form-control" id="message"
+                                                placeholder="Message"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-form-box">
@@ -348,7 +371,7 @@
 
     <!-- jquery latest version -->
     <script src="js/jquery.min.js"></script>
-    
+
     <!-- popper.min js -->
     <script src="js/popper.min.js"></script>
 
@@ -362,4 +385,5 @@
     <script src="js/custom.js"></script>
 
 </body>
+
 </html>
