--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="treatments.html">Productos 1</a>
                                     <a class="dropdown-item" href="#">Productos 2</a>
-                                    <a class="dropdown-item" href="#">Link 3</a>
+                                    <a class="dropdown-item" href="#">Productos 3</a>
                                 </div>
                             </li>
                             <li class="nav-item">
