--- a/treatments.html
+++ b/treatments.html
@@ -61,8 +61,14 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="treatments.html">Productos</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contacto</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown" href="#" id="navbardrop"
+                                    data-toggle="dropdown">Categorias</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="treatments.html">Productos 1</a>
+                                    <a class="dropdown-item" href="#">Productos 2</a>
+                                    <a class="dropdown-item" href="#">Productos 3</a>
+                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html">Nosotros</a>
