--- a/treatments.html
+++ b/treatments.html
@@ -58,9 +58,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="treatments.html">Productos</a>
-                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown" href="#" id="navbardrop"
                                     data-toggle="dropdown">Categorias</a>
@@ -69,6 +66,9 @@
                                     <a class="dropdown-item" href="#">Productos 2</a>
                                     <a class="dropdown-item" href="#">Productos 3</a>
                                 </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html">Nosotros</a>
