--- a/contact.html
+++ b/contact.html
@@ -38,15 +38,8 @@
         <header id="top" class="top_navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-<<<<<<< HEAD
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%"
-                            alt="" /></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-=======
                     <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%" alt="" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
->>>>>>> master
                         <span class="navbar-toggler-icon">
                             <i class="fa fa-bars"></i>
                         </span>
@@ -57,8 +50,7 @@
                                 <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown" href="#" id="navbardrop"
-                                    data-toggle="dropdown">Categorias</a>
+                                <a class="nav-link dropdown" href="#" id="navbardrop" data-toggle="dropdown">Categorias</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="treatments.html">Productos 1</a>
                                     <a class="dropdown-item" href="#">Productos 2</a>
@@ -74,14 +66,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQ</a>
                             </li>
-<<<<<<< HEAD
                         </ul>
                         <ul class="navbar-nav">
                             <form action="buscar.php" class="Navbar">
                                 <input type="text" placeholder="Buscar" name="buscar" class="nav-link">
                             </form>
-=======
->>>>>>> master
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="login.html">Iniciar
