mod lib jquery faq

--- a/faq.html
+++ b/faq.html
@@ -345,8 +345,7 @@
                             </div>
                             <div class="footer">
                                 <p><span>Dirección :</span>
-                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
-                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
+                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812" target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
                                 </p>
                                 </a>
                                 <p><span>Teléfono :</span> (55) 5629-9700
@@ -377,7 +376,7 @@
     <!-- End wrapper -->
 
     <!-- jquery latest version -->
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
 
     <!-- popper.min js -->
     <script src="js/popper.min.js"></script>
